--- a/app/src/main/res/menu/edit_notes_menu.xml
+++ b/app/src/main/res/menu/edit_notes_menu.xml
@@ -9,7 +9,7 @@
 
     <item android:id="@+id/share_button"
         app:showAsAction="ifRoom"
-        android:icon="@drawable/share"
+        android:icon="@drawable/share_black"
         android:title="Share"></item>
 
 
